Fix invisible text with some themes

--- a/styles/regex-tester.less
+++ b/styles/regex-tester.less
@@ -25,7 +25,6 @@
     font-family: monospace;
     white-space: pre-wrap;
     background-color: @input-background-color;
-    color: @text-color-selected;
   }
 
   .hidden {
